--- a/src/main/resources/templates/pagamento/LancamentoPagamentoParcela.html
+++ b/src/main/resources/templates/pagamento/LancamentoPagamentoParcela.html
@@ -5,7 +5,7 @@
 	layout:decorate="~{layout/padrao}">
 	
 <head>
-	<title>Cadastro Contato</title>
+	<title>Lançamento da Parcela</title>
 </head>
 
 <body>
@@ -16,113 +16,95 @@
 
 		<ol class="breadcrumb">
 			<li><a th:href="@{/}">Dashboard</a></li>
-			<li><a th:href="@{/fornecedor}">Fornecedor</a></li>
-			<li><a th:href="@{/fornecedor/cadastro/{id}(id=${idFornecedor})}">Cadastro</a></li>
-			<li><a href="" draggable="false">Contato</a></li>
+			<li><a th:href="@{/pagamento}">Pagamento</a></li>
+			<li><a th:href="@{/pagamento/lancamento/{id}(id=1)}">Lançamento</a></li>
+			<li><a href="" draggable="false">Parcela</a></li>
 		</ol>
 
 		<div class="row cabecalho">
-			<div class="col-xs-12 col-md-6">
-				<h1>Cadastro Contato</h1>
+			<div class="col-md-12">
+				<h1>Lançamento da Parcela</h1>
 			</div>
 		</div>
 		
 		<th:block th:include="layout/fragments/mensagemSucesso"></th:block>
 		
 		<div class="well">
-			<form class="form-vertical" th:action="@{/fornecedor/contato/{id}(id=${idFornecedor})}" method="POST" th:object="${contatoModel}">
+			<form class="form-vertical" th:action="@{/pagamento/lancamento/{id}(id=1)}" method="POST" th:object="${pagamentoParcelaModel}">
 			
 				<th:block th:include="layout/fragments/mensagemErro"></th:block>
 			
-				<input type="hidden" th:field="*{fornecedor}"/>
+<!-- 				<input type="hidden" th:field="*{pagamento}"/> -->
 			
 				<div class="row">
-					<div class="form-group col-sm-2">
-						<label for="id" class="control-label">ID</label>
-						<input type="text" readonly id="id" class="form-control" th:field="*{idContato}">
+					<div class="form-group col-sm-3">
+						<label for="parcela" class="control-label">Parcela</label>
+						<input type="text" readonly id="parcela" class="form-control">
 					</div>
 					
-					<div class="form-group col-sm-4" th:classappend="${#fields.hasErrors('contato')} ? has-error">
-						<label for="contato" class="control-label">Contato</label>
-						<input type="text" id="contato" class="form-control" th:field="*{contato}" th:classappend="${#fields.hasErrors('contato')} ? has-error">
+					<div class="form-group col-sm-3">
+						<label for="vcto" class="control-label">Data de Vencimento</label>
+						<input type="date" id="vcto" class="form-control">
 					</div>
 		
-					<div class="form-group col-sm-2">
-						<label for="telefone1" class="control-label">Telefone-1</label>
-						<input type="text" id="telefone1" class="form-control" th:field="*{telefone1}">
+					<div class="form-group col-sm-3">
+						<label for="valor" class="control-label">Valor</label>
+						<input type="text" id="valor" class="form-control">
 					</div>
 		
-					<div class="form-group col-sm-2">
-						<label for="telefone2" class="control-label">Telefone-2</label>
-						<input type="text" id="telefone2" class="form-control" th:field="*{telefone2}">
-					</div>
-		
-					<div class="form-group col-sm-2">
-						<label for="telefone3" class="control-label">Telefone-3</label>
-						<input type="text" id="telefone3" class="form-control" th:field="*{telefone3}">
+					<div class="form-group col-sm-3">
+						<label for="desconto" class="control-label">Desconto</label>
+						<input type="text" id="desconto" class="form-control">
 					</div>
 				</div>
-
 
 				<div class="row">
-					<div class="form-group col-sm-2">
-						<label for="cep" class="control-label">CEP</label>
-						<input type="text" id="cep" class="form-control" th:field="*{cep}">
+					<div class="form-group col-sm-3">
+						<label for="juros" class="control-label">Juros</label>
+						<input type="text" readonly id="juros" class="form-control">
 					</div>
 					
-					<div class="form-group col-sm-4">
-						<label for="endereco" class="control-label">Endereço</label>
-						<input type="text" id="endereco" class="form-control" th:field="*{endereco}">
+					<div class="form-group col-sm-3">
+						<label for="mora" class="control-label">Mora</label>
+						<input type="text" id="mora" class="form-control">
 					</div>
 		
-					<div class="form-group col-sm-1">
-						<label for="numero" class="control-label">Número</label>
-						<input type="text" id="numero" class="form-control" th:field="*{numero}">
+					<div class="form-group col-sm-3">
+						<label for="outros" class="control-label">Outros</label>
+						<input type="text" id="outros" class="form-control">
 					</div>
 		
-					<div class="form-group col-sm-5">
-						<label for="complemento" class="control-label">Complemento</label>
-						<input type="text" id="complemento" class="form-control" th:field="*{complemento}">
+					<div class="form-group col-sm-3">
+						<label for="total" class="control-label">TOTAL</label>
+						<input type="text" id="total" class="form-control">
 					</div>
 				</div>
 
-
-				<div class="row">
-					<div class="form-group col-sm-6">
-						<label for="bairro" class="control-label">Bairro</label>
-						<input type="text" id="bairro" class="form-control" th:field="*{bairro}">
-					</div>
+				<div class="well well-sm">
+					<div class="row">
+						<div class="form-group col-sm-3">
+							<label for="dt-pgto" class="control-label">Data de Pagamento</label>
+							<input type="date" id="dt-pgto" class="form-control">
+						</div>
+						
+						<div class="form-group col-sm-6">
+							<label for="forma-pgto" class="control-label">Forma de Pagamento</label>
+							<select class="form-control">
+								<option selected="selected">Selecione...</option>
+								<option>Dinheiro</option>
+								<option>Cartão</option>
+								<option>Cheque</option>
+							</select>
+						</div>
 					
-					<div class="form-group col-sm-5">
-						<label for="cidade" class="control-label">Cidade</label>
-						<input type="text" id="cidade" class="form-control" th:field="*{cidade}">
-					</div>
-		
-					<div class="form-group col-sm-1">
-						<label for="uf" class="control-label">UF</label>
-						<input type="text" id="uf" class="form-control" th:field="*{uf}">
 					</div>
 				</div>
-
-				
-				<div class="row">
-					<div class="form-group col-sm-6" th:classappend="${#fields.hasErrors('email')} ? has-error">
-						<label for="email" class="control-label">e-mail</label>
-						<input type="text" id="email" class="form-control" th:field="*{email}" th:classappend="${#fields.hasErrors('email')} ? has-error">
-					</div>
-					
-					<div class="form-group col-sm-6">
-						<label for="site" class="control-label">Site/Blog</label>
-						<input type="text" id="site" class="form-control" th:field="*{site}">
-					</div>
-				</div>
-
 
 				<div class="row">
 					<div class="form-group col-sm-12">
 						<button type="submit" class="btn btn-primary">Salvar</button>
-						<a class="btn btn-default" th:href="@{/fornecedor/contato/{id}(id=${idFornecedor})}">Novo Contato</a>
-						<a class="btn btn-default" th:href="@{/fornecedor/cadastro/{id}(id=${idFornecedor})}">Voltar</a>
+						<a class="btn btn-default" th:href="@{/pagamento/lancamento/parcela/{id}(id=1)}">Nova Parcela</a>
+						<a class="btn btn-default" th:href="@{/pagamento/lancamento/{id}(id=1)}">Voltar</a>
 					</div>
 				</div>					
 			</form>
@@ -134,13 +116,6 @@
 
 	
 </section>
-
-<th:block layout:fragment="javaScript-extra">
-
-	<script th:src="@{/js/bootstrap-toggle.min.js}"></script>
-	<script th:src="@{/js/toggle.js}"></script>
-		
-</th:block>
 
 </body>
 </html>
