--- a/src/main/resources/templates/pagamentoBaixa/BaixarParcela.html
+++ b/src/main/resources/templates/pagamentoBaixa/BaixarParcela.html
@@ -5,7 +5,7 @@
 	layout:decorate="~{layout/padrao}">
 	
 <head>
-	<title>Lançamento da Parcela</title>
+	<title>Baixar Parcela</title>
 </head>
 
 <body>
@@ -16,21 +16,20 @@
 
 		<ol class="breadcrumb">
 			<li><a th:href="@{/}">Dashboard</a></li>
-			<li><a th:href="@{/pagamento}">Pagamento</a></li>
-			<li><a th:href="@{/pagamento/lancamento/{id}(id=1)}">Lançamento</a></li>
+			<li><a th:href="@{/pagamento/baixa}">Baixa de Pagamento</a></li>
 			<li><a href="" draggable="false">Parcela</a></li>
 		</ol>
 
 		<div class="row cabecalho">
 			<div class="col-md-12">
-				<h1>Lançamento da Parcela</h1>
+				<h1>Baixar Parcela</h1>
 			</div>
 		</div>
 		
 		<th:block th:include="layout/fragments/mensagemSucesso"></th:block>
 		
 		<div class="well">
-			<form class="form-vertical" th:action="@{/pagamento/lancamento/{id}(id=1)}" method="POST" th:object="${pagamentoParcelaModel}">
+			<form class="form-vertical" th:action="@{/pagamento/baixa/parcela/{id}(id=1)}" method="POST" th:object="${pagamentoParcelaModel}">
 			
 				<th:block th:include="layout/fragments/mensagemErro"></th:block>
 			
@@ -44,12 +43,12 @@
 					
 					<div class="form-group col-sm-3">
 						<label for="vcto" class="control-label">Data de Vencimento</label>
-						<input type="date" id="vcto" class="form-control">
+						<input type="date" readonly id="vcto" class="form-control">
 					</div>
 		
 					<div class="form-group col-sm-3">
 						<label for="valor" class="control-label">Valor</label>
-						<input type="text" id="valor" class="form-control">
+						<input type="text" readonly id="valor" class="form-control">
 					</div>
 		
 					<div class="form-group col-sm-3">
@@ -103,8 +102,7 @@
 				<div class="row">
 					<div class="form-group col-sm-12">
 						<button type="submit" class="btn btn-primary">Salvar</button>
-						<a class="btn btn-default" th:href="@{/pagamento/lancamento/parcela/{id}(id=1)}">Nova Parcela</a>
-						<a class="btn btn-default" th:href="@{/pagamento/lancamento/{id}(id=1)}">Voltar</a>
+						<a class="btn btn-default" th:href="@{/pagamento/baixa}">Voltar</a>
 					</div>
 				</div>					
 			</form>
