--- a/src/main/resources/templates/fornecedor/PesquisaFornecedorModal.html
+++ b/src/main/resources/templates/fornecedor/PesquisaFornecedorModal.html
@@ -6,15 +6,31 @@
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title">Título do modal</h4>
+<!-- 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> -->
+	        <h4 class="modal-title">Pesquisar Fornecedor</h4>
 	      </div>
+	      
 	      <div class="modal-body">
-	        <p>One fine body&hellip;</p>
+
+	      	<div class="row">
+	      		<div class="col-sm-12">
+			      	<label for="razao-social" class="label-control">Nome/Razão Social</label>
+			      	<input type="text" id="razao-social" class="form-control" />
+			    </div>
+		   </div>
+			      	
+	      	<div class="row">
+	      		<div class="col-sm-6">
+			      	<label for="cpf-cnpj" class="label-control">CPF/CNPJ</label>
+			      	<input type="text" id="cpf-cnpj" class="form-control"/>
+			    </div>
+			</div>
+	        
 	      </div>
+	      
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-	        <button type="button" class="btn btn-primary">Salvar mudanças</button>
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+	        <button type="button" class="btn btn-primary" data-dismiss="modal">Selecionar</button>
 	      </div>
 	    </div><!-- /.modal-content -->
 	  </div><!-- /.modal-dialog -->
