--- a/src/main/resources/templates/setor/ListarSetores.html
+++ b/src/main/resources/templates/setor/ListarSetores.html
@@ -60,7 +60,10 @@
 						<td th:text="${setor.descricao}"></td>
 
 						<td class="text-center">
-							<a class="btn btn-link btn-xs js-btn-ativar-desativar" data-toggle="tooltip" data-placement="top" title="Ativar/Desativar" id="ativar-desativar"
+							<a class="btn btn-link btn-xs js-btn-ativar-desativar" 
+								data-toggle="tooltip" 
+								data-placement="top" 
+								title="Ativar/Desativar" 
 							 	data:url="@{/setor/{id}(id=${setor.idSetor})}" 
 							 	data:descricao="${setor.descricao}" 
 							 	data:status="${setor.ativo}"> 
