--- a/src/main/resources/templates/usuario/ListarUsuarios.html
+++ b/src/main/resources/templates/usuario/ListarUsuarios.html
@@ -62,7 +62,10 @@
 						<td th:text="${usuario.nome}"></td>
 
 						<td class="text-center">
-							<a class="btn btn-link btn-xs js-btn-ativar-desativar" data-toggle="tooltip" data-placement="top" title="Ativar/Desativar" id="ativar-desativar"
+							<a class="btn btn-link btn-xs js-btn-ativar-desativar" 
+								data-toggle="tooltip" 
+								data-placement="top" 
+								title="Ativar/Desativar"
 							 	data:url="@{/usuario/{id}(id=${usuario.idUsuario})}" 
 							 	data:descricao="${usuario.nome}" 
 							 	data:status="${usuario.ativo}"> 
